@@ -94,7 +94,7 @@ extern "C" {
 #define LINE_CALLHUBCLOSE __MSABI_LONG(33)
 #define LINE_DEVSPECIFICEX __MSABI_LONG(34)
 
-#define INITIALIZE_NEGOTIATION 0xFFFFFFFFUL
+#define INITIALIZE_NEGOTIATION __MSABI_LONG(0xFFFFFFFFU)
 
 #define LINEADDRCAPFLAGS_FWDNUMRINGS 0x00000001
 #define LINEADDRCAPFLAGS_PICKUPGROUPID 0x00000002
