@@ -2814,8 +2814,8 @@ WINBASEAPI BOOLEAN TryAcquireSRWLockShared(PSRWLOCK SRWLock);
 
 /*One-Time Initialization http://msdn.microsoft.com/en-us/library/aa363808(VS.85).aspx*/
 /* FIXME: See above !!! */
-#define INIT_ONCE_ASYNC 0x00000002UL
-#define INIT_ONCE_INIT_FAILED 0x00000004UL
+#define INIT_ONCE_ASYNC __MSABI_LONG(0x00000002U)
+#define INIT_ONCE_INIT_FAILED __MSABI_LONG(0x00000004U)
 
 typedef PRTL_RUN_ONCE PINIT_ONCE;
 typedef PRTL_RUN_ONCE LPINIT_ONCE;
@@ -3758,7 +3758,7 @@ WINBASEAPI WINBOOL WINAPI SetFileIoOverlappedRange(
   ULONG Length
 );
 
-#define PROCESS_AFFINITY_ENABLE_AUTO_UPDATE 0x00000001UL
+#define PROCESS_AFFINITY_ENABLE_AUTO_UPDATE __MSABI_LONG(0x00000001U)
 
 WINBASEAPI WINBOOL WINAPI SetProcessAffinityUpdateMode(
   HANDLE ProcessHandle,
