@@ -6462,9 +6462,9 @@ typedef PVOID RTL_SRWLOCK;
 typedef PVOID RTL_RUN_ONCE, *PRTL_RUN_ONCE;
 typedef DWORD (WINAPI *PRTL_RUN_ONCE_INIT_FN)(PRTL_RUN_ONCE, PVOID, PVOID *);
 #define RTL_RUN_ONCE_INIT 0
-#define RTL_RUN_ONCE_CHECK_ONLY 1UL
-#define RTL_RUN_ONCE_ASYNC 2UL
-#define RTL_RUN_ONCE_INIT_FAILED 4UL
+#define RTL_RUN_ONCE_CHECK_ONLY __MSABI_LONG(1U)
+#define RTL_RUN_ONCE_ASYNC __MSABI_LONG(2U)
+#define RTL_RUN_ONCE_INIT_FAILED __MSABI_LONG(4U)
 #define RTL_RUN_ONCE_CTX_RESERVED_BITS 2
 #endif /* _RTL_RUN_ONCE_DEF */
 #define RTL_SRWLOCK_INIT 0
